--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 envlist =
 	py27-django{111}
-	py34-django{111}
-	py35-django{111,master}
-	py36-django{111,master}
+	py34-django{111,200}
+	py35-django{111,200,master}
+	py36-django{111,200,master}
 	docs
 
 [testenv]
@@ -15,8 +15,10 @@ deps =
 	coverage
 	dj-database-url
 	django111: Django >= 1.11, < 2.0
+	django200: Django ~= 2.0b1
 	djangomaster: https://github.com/django/django/archive/master.tar.gz
 	postgres: psycopg2
+pip_pre = True
 commands =
 	coverage run --source polymorphic runtests.py
 
